# yay-chess

./: .gitignore  README.md  pyproject.toml  uci.txt
src/: board.py  main.py  position.py  search.py  state.py  uci.py
xkcd/: README.md
