[project]
name = "yay-chess"
version = "0.1.0"
description = "A simple Python chess engine with interesting algorithms"
authors = [
    {name = "Joshua Park", email = "joshuprk@gmail.com"},
]
dependencies = [
    "numpy>=2.0.1",
    "torch>=2.4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
